Fix #6012 - Shift icon to avoid problem with the scroll

--- a/src/sass/components/contact/contactItem.scss
+++ b/src/sass/components/contact/contactItem.scss
@@ -225,7 +225,7 @@
 .copy-button,
 .contactItem-compose {
     position: absolute;
-    left: -27px;
+    left: -35px;
     top: 10px;
 }
 
